Fri Nov 10 16:48:14 UTC 2006  Kevin Heifner  <heifner_k@ociweb.com>

        * docs/templates/vc7csharp.txt:
        * docs/templates/vc8csharp.txt:
        * templates/vc7csharp.mpd:
        * templates/vc8csharp.mpd:

          Added a new template variable, 'keyfile', to support assembly
          signing.

Thu Nov  9 13:25:05 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/GHSWorkspaceCreator.pm:

          Removed the -I. from the default project and added
          --one_instantiation_per_object.

Mon Nov  6 19:27:44 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/CCProjectCreator.pm:

          Code Composer checks the timestamp on the project file.  So, we
          need to compare the output to ensure that we don't update a
          project file that doesn't need to be.

        * modules/ProjectCreator.pm:

          Fixed a bug where generated headers, inline files or template
          files would not be automatically added in the event that the user
          provided input for those types (i.e., Header_Files, Inline_Files,
          or Template_Files) that corresponds to a directory.  Now,
          specifying the following:

          Header_Files {
            some_dir_name
          }

          works as if the Header_Files section was not supplied, which is
          equivalent to the following:

          Header_Files {
            .
          }

          This pertains to automatic addition of generated files.

Mon Nov  6 15:11:47 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Fixed a bug where unrecognized lines in 'specific' sections would
          not be flagged as an error.

        * modules/StringProcessor.pm (parse_assignment):

          Since template variable scopes can have spaces in the names, we
          must allow scopes to have spaces in the names here as well.

        * modules/Creator.pm:
        * modules/WorkspaceCreator.pm:
