@@ -23,5 +23,6 @@ rpc           = 0
 swig_java     = 0
 swig_perl     = 0
 xerces        = 0
+xalanc        = 0
 zlib          = 0
 zzip          = 0
