@@ -1,0 +1,9 @@
+// -*- MPC -*-
+// $Id$
+
+project: xerces {
+  requires += xalanc
+  includes += $(XALANCROOT)/include
+  libpaths += $(XALANCROOT)/lib
+  lit_libs += xalan-c xalanMsg
+}
